# clms-hrwsi-system

./: .gitattributes  .gitignore  .gitlab-ci.yml  README.md
HRWSI_Database/: .database_gitlab-ci.yml  Dockerfile  README.md
HRWSI_Database/docker_compose_yml/: README.md  docker-compose.CI.yml  docker-compose.dev.yml  docker-compose.prod.yml
HRWSI_Database/init_database/: 0_init_database_set_database.sql  1_init_database_triggering_conditions.sql  2_init_database_processing_tasks.sql  3_init_database_products.sql  4_init_database_utils.sql  README.md
HRWSI_Database/launchers/: README.md  init_dev_database.sh  init_prod_database.sh  terminate_dev_database.sh
HRWSI_Database/test_utils/: hrwsi_result_test_checker.sh  run_tests.sh
HRWSI_Database/tests/: README.md
HRWSI_Database/tests/functions/: test_init_database_processing_tasks_functions.sql  test_init_database_utils_functions.sql
HRWSI_Database/tests/tables/: test_table_indexation_workflow.sql  test_table_input.sql  test_table_nomad_job_dispatch.sql  test_table_processing_status_workflow.sql  test_table_processing_tasks.sql  test_table_products.sql  test_table_virtual_machine.sql
HRWSI_Database/update_database/: README.md
HRWSI_Deployment/packaging/: README.md
HRWSI_Deployment/provision/: .provision_gitlab-ci.yml  README.md
HRWSI_Deployment/provision/terraform/: HRWSI-NRT-SYS-openrc.sh  project-variables.tfvars
HRWSI_Processing_Routines/: README.md
HRWSI_Processing_Routines/HRWSI_Daily_Processing_Routines/awic/: README.md
HRWSI_Processing_Routines/HRWSI_Daily_Processing_Routines/gfsc/: Dockerfile  GFSC1_Metadata.xml  GFSC_Metadata.xml  README.md  gf.py  gf1.py  gf2.py  gfio.py
HRWSI_Processing_Routines/HRWSI_Yearly_Processing_Routines/sp_s1s2/let-it-snow-1.11.0/: .dockerignore  CMakeLists.txt  Dockerfile
HRWSI_Processing_Routines/HRWSI_Yearly_Processing_Routines/sp_s1s2/let-it-snow-1.11.0/analysis/: app_wrappers.py  cloud_builder.py  findRefCandidates.py  readme.md  run_snowcover.py  snow_annual_map_analysis_schema.json  snowcover.py
HRWSI_Processing_Routines/HRWSI_Yearly_Processing_Routines/sp_s1s2/let-it-snow-1.11.0/analysis/utils/: profiling_pass1.5.py
HRWSI_Processing_Routines/HRWSI_Yearly_Processing_Routines/sp_s1s2/let-it-snow-1.11.0/app/: CMakeLists.txt
HRWSI_Processing_Routines/HRWSI_Yearly_Processing_Routines/sp_s1s2/let-it-snow-1.11.0/doc/: LIS_configuration_for_experts.md  TODO.md  snow_annual_map.md  synthesis_default_configuration.json
HRWSI_Processing_Routines/HRWSI_Yearly_Processing_Routines/sp_s1s2/let-it-snow-1.11.0/doc/atbd/: ATBD_CES-Neige.tex  ATBD_Cold_Cloud_Removal.tex  fsc_launch_schema.json  page_titre.tex  snow_annual_map_schema.json  synthesis_launch_schema.json
HRWSI_Processing_Routines/HRWSI_Yearly_Processing_Routines/sp_s1s2/let-it-snow-1.11.0/doc/atbd/include/: S2snow.tex  castest_CESneige.aux  castest_CESneige.tex
HRWSI_Processing_Routines/HRWSI_Yearly_Processing_Routines/sp_s1s2/let-it-snow-1.11.0/doc/cla/: icla-en.doc
HRWSI_Processing_Routines/HRWSI_Yearly_Processing_Routines/sp_s1s2/let-it-snow-1.11.0/doc/tutorials/: lis_from_sen2cor.md
HRWSI_Processing_Routines/HRWSI_Yearly_Processing_Routines/sp_s1s2/let-it-snow-1.11.0/docker/: README.md
HRWSI_Processing_Routines/HRWSI_Yearly_Processing_Routines/sp_s1s2/let-it-snow-1.11.0/hpc/: batch_compute_NOBS.sh  batch_compute_PSL.sh  compute_PSL.py  get_altitude_tiles.sh  runTile_lis_Sentinel2_cluster_muscate_anytile.sh  runTile_lis_Sentinel2_datalake_anytile.sh  runTile_lis_Sentinel2_datalake_anytile_anydate.sh  run_lis_from_filelist.sh  run_snow_annual_map.sh
HRWSI_Processing_Routines/HRWSI_Yearly_Processing_Routines/sp_s1s2/let-it-snow-1.11.0/legacy/doc/: S2snow.m  load_demo_input.m
HRWSI_Processing_Routines/HRWSI_Yearly_Processing_Routines/sp_s1s2/let-it-snow-1.11.0/python/: CMakeLists.txt
HRWSI_Processing_Routines/HRWSI_Yearly_Processing_Routines/sp_s1s2/let-it-snow-1.11.0/python/s2snow/: fsc_config.py  gdal_wrappers.py  lis_exception.py  mission_config.py  otb_wrappers.py  resolution.py  snow_detector.py  snow_product.py  snow_synthesis.py  utils.py
HRWSI_Processing_Routines/HRWSI_Yearly_Processing_Routines/sp_s1s2/let-it-snow-1.11.0/src/: CMakeLists.txt  ComputeNbPixels.cxx  itkNarySnowMaskImageFilter.h  itkUnaryCloudMaskImageFilter.h  otbStreamingHistogramMaskedVectorImageFilter.h  otbStreamingHistogramMaskedVectorImageFilter.txx
HRWSI_Processing_Routines/HRWSI_Yearly_Processing_Routines/sp_s1s2/let-it-snow-1.11.0/styles/: LIS_FSC_style_raster.qml  LIS_NOB_style.qml  LIS_SEB_style_raster_qgis_3.4.qml  LIS_SEB_style_vector_qgis_3.4.qml  LIS_SOD_style.qml
HRWSI_Processing_Routines/HRWSI_Yearly_Processing_Routines/sp_s1s2/let-it-snow-1.11.0/test/: CMakeLists.txt  cloud_removal_step3_test.py  histo_utils_snowline_internal_test.cxx  itkUnaryCloudMaskImageFilterTest.cxx  snow_synthesis_test.py
HRWSI_System/: .system_gitlab-ci.yml  README.md  requirements.txt
HRWSI_System/harvester/: README.md  harvester.py
HRWSI_System/launcher/: README.md  launcher.py
HRWSI_System/orchestrator/: README.md  orchestrator.py
HRWSI_database/: .database_gitlab-ci.yml  Dockerfile  README.md
HRWSI_database/docker_compose_yml/: docker-compose.CI.yml  docker-compose.dev.yml  docker-compose.prod.yml
HRWSI_database/init_database/: 0_init_database_set_database.sql  1_init_database_triggering_conditions.sql  2_init_database_processing_tasks.sql  3_init_database_products.sql  4_init_database_utils.sql  README.md
HRWSI_database/launchers/: README.md  init_dev_database.sh  init_prod_database.sh  terminate_dev_database.sh
HRWSI_database/test_utils/: hrwsi_result_test_checker.sh  run_tests.sh
HRWSI_database/tests/: README.md
HRWSI_system/: log_util.py
HRWSI_system_deployment/deployment/: README.md
HRWSI_system_deployment/provision/: .provision_gitlab-ci.yml  README.md
test/: README.md
utils/: README.md  file.py  logger.py
utils/rabbitmq/: README.md  rabbitmq.sh  rabbitmq_consumer.py  rabbitmq_manager.py  rabbitmq_producer.py  robust_consumer.py  robust_rpc_consumer.py
(+267 files in other folders)
